Wed Sep 20 15:48:22 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Changed std::auto_ptr to AutoPtr everywhere except Quartz

Wed Sep 20 14:27:55 BST 2000 Olly Betts

	* IRDatabase renamed to just plain ol' Database.

Wed Sep 20 13:31:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added untested AutoPtr template (auto_ptr clone)

Wed Sep 20 13:11:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* malloc_wrapper.sh now passes parameters in

Wed Sep 20 13:02:22 BST 2000 Olly Betts

	* *PostList: Put back in Assert-s re at_end() not being valid before
	  next() or skip_to().

	* OmPositionListIterator: postincrement and skip_to now return void.

	* Added DEBUGAPICALL to OmDocumentTerm, OmDocumentContents,
	  OmSettings, OmPositionListIterator, OmTermListIterator.

	* Some work on getting Java auto-translation of apitest to work
	  again [actually checked in with previous changes].

Wed Sep 20 11:53:16 BST 2000 Olly Betts

	* Disabled special casing of postlists with termfreq == 0 when
	  building AND and OR trees.

	* Removed "get_maxweight()" and "recalc_maxweight()" implementations
	  from in EmptyPostList.

Wed Sep 20 10:36:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added malloc-wrapper.sh to the distribution.

Tue Sep 19 20:47:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Various modifications to Quartz.  Work towards making sure that
	  consistent revisions get opened, and that recovery is performed
	  when needed.

Tue Sep 19 19:13:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added OmNeedRecoveryError, to signal that a database needs a
	  recovery step to be performed.

	* Use $(LN_S) instead of ln -s in test/Makefile.am

Tue Sep 19 18:42:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement get_maxweight() and recalc_maxweight() in EmptyPostList
	  so that they don't attempt to use an invalid IRWeight object.